--- a/main/java/com/example/demo/style.css
+++ b/main/java/com/example/demo/style.css
@@ -26,8 +26,17 @@
     -fx-text-fill: #ffffff;
 }
 
-.name-input-label{
-	-fx-text-fill: #ffffff
+.name-input-label, 
+.controls-label{
+	-fx-text-fill: #ffffff;
+	-fx-font-weight: bold;
+	-fx-font-size: 14px;
+}
+
+.controls{
+	-fx-text-fill: #45a049;
+	-fx-font-weight: bold;
+	-fx-font-size: 14px;
 }
 
 .start-button {
